--- a/django_2/myproject/app_1_app/templates/index.html
+++ b/django_2/myproject/app_1_app/templates/index.html
@@ -3,5 +3,10 @@
 {% block title%}Мой сайт{% endblock %}
 
 {% block content%}
-    это главная страница
+    <h1>это главная страница</h1>
+    <a href="user_form/">создать пользователя</a>
+    <br>
+    <a href="product_viev/">создать продукты</a>
+    <br>
+    <a href="total_in_db/">общее количество продуктов</a>
 {% endblock %}
